# CMakeProject1

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  t1.cpp
args_parse/: ArgsParser.cpp  ArgsParser.hpp  BoolArg.cpp  BoolArg.hpp  CMakeLists.txt  ForwardDeclaration.hpp  IntArg.cpp  IntArg.hpp  StringArg.cpp  StringArg.hpp  Validator.hpp  arg_parse.hpp  argument.cpp  argument.hpp
demo/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  main.cpp
